--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html >
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>تكنو ويب</title>
@@ -139,7 +139,10 @@ img {vertical-align: middle;}
 
 
 
-<div class="slideshow-container">
+<div class="slideshow-container" dir="rtl">
+<br>
+<br>
+  <h1 class="fa-border w3-hover-red w3-blue w3-border-deep-orange">الطلاب المنتسبين لدورة تصميم المواقع المتقدمة</h1>
 <!-- ===========================1============================= -->
 
 <div class="mySlides fade">
@@ -232,10 +235,23 @@ img {vertical-align: middle;}
   <span class="dot" onclick="currentSlide(10)"></span> 
 </div>
 
+<!-- =========================================================== -->
 
 
+<div class="w3-container" dir="rtl">
+  <h1 class="fa-border w3-hover-red w3-blue w3-border-deep-orange">الدروس التمهيدية لدورة تصميم المواقع - جز ء الفرونت الإند</h1>
+  
+<iframe width="400" height="345" src="https://www.youtube.com/embed/i0G-Zlf4BIk">
+ 
+</iframe>
 
-
+<iframe width="400" height="345" src="https://www.youtube.com/embed/Uj8WINT40fg">
+</iframe>
+<iframe width="400" height="345" src="https://www.youtube.com/embed/GMkefbCS_jU">
+</iframe>
+<iframe width="400" height="345" src="https://www.youtube.com/embed/YspmIgu7z9g">
+</iframe>
+</div> 
 
 
 
@@ -267,14 +283,6 @@ function showSlides(n) {
   dots[slideIndex-1].className += " active";
 }
 </script>
-<!-- <section>
-  <img class="mySlides" src="images.jpg"
-  style="width:100%">
-  <img class="mySlides" src="10.1 bg.jpg"
-  style="width:100%">
-  <img class="mySlides" src="logo.jpg"
-  style="width:100%">
-</section> -->
 
 <script>
   // Automatic Slideshow - change image every 3 seconds
