--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@ img {vertical-align: middle;}
 <!-- ================3======================================== -->
 <div class="mySlides fade">
        <div class="numbertext">3 / 3</div>
-       <img src="images.jpg" style="width:100%">
-       <div class="text"><h2>مصطفى</h2>مصرى<p>مبتدئ ويب</p></div>
+       <img src="مصطفى اسامة.jpg" style="width:100%">
+       <div class="text"><h2>مصطفى اسامة حامد</h2>بنى سويف - مصر<p>مبتدئ ويب</p></div>
      </div>
      <!-- ==========4============================================== -->
 <div class="mySlides fade">
