--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@ img {vertical-align: middle;}
 
 
 
-<div class="slideshow-container" dir="rtl">
+<div class="slideshow-container" >
 <br>
 <br>
-  <h1 class="fa-border w3-hover-red w3-blue w3-border-deep-orange">الطلاب المنتسبين لدورة تصميم المواقع المتقدمة</h1>
+  <h1 dir="rtl" class="fa-border w3-hover-red w3-blue w3-border-deep-orange">الطلاب المنتسبين لدورة تصميم المواقع المتقدمة</h1>
 <!-- ===========================1============================= -->
 
 <div class="mySlides fade">
@@ -165,7 +165,7 @@ img {vertical-align: middle;}
 <div class="mySlides fade">
        <div class="numbertext">3 / 3</div>
        <img src="مصطفى اسامة.jpg" style="width:100%">
-       <div class="text"><h2>مصطفى اسامة حامد</h2>بنى سويف - مصر<p>مبتدئ ويب</p></div>
+       <div class="text"><h2>مصطفى اسامة حامد</h2>بنى سويف - مصر<p>‏كلية اداب جامعة بنى سويف</p></div>
      </div>
      <!-- ==========4============================================== -->
 <div class="mySlides fade">
